# smart-llm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  acs.py  acs_mcp_server.py  core_acs.py  dataset_builder.py  evaluation_suite.py  evolve.py  executive.py  generate_traces.py  model_registry.py  phase_b_builder.py  policy.py  pyproject.toml  quality_filter.py  requirements.txt  run_acs.sh  trace_collector.py  trainer.py  world_model.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
tests/: test_world_model.py
