[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "autonomous-cognitive-system"
version = "3.1.0"
description = "A local-first pipeline for autonomous RLHF and continuous AI self-improvement."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Arayik Harutyunyan"}
]
keywords = ["llm", "rlhf", "lora", "fine-tuning", "autonomous", "reasoning", "cognitive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27.0",
    "networkx>=3.2",
    "openai>=1.12.0",
    "sympy>=1.12",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]
train = [
    "mlx-lm>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/mailtoharutyunyan/autonomous-cognitive-system"
Repository = "https://github.com/mailtoharutyunyan/autonomous-cognitive-system"
Issues = "https://github.com/mailtoharutyunyan/autonomous-cognitive-system/issues"

[project.scripts]
acs = "acs:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
